may be final commit

--- a/.env
+++ b/.env
@@ -1,6 +1,9 @@
 URL=localhost
+
 PORT=5500
 DB_NAME = "database_development"
+DB_NAME2 = 'trello_exam_dev'
 DB_LOGIN = "damnedelf"
 DB_PASSWORD = "killmenot"
 DB_HOST='127.0.0.1'
+DB_CONNECTION_STRING ='postgresql://damnedelf:killmenot@127.0.0.1:5432/database_development'
